--- a/view/trip_states.xml
+++ b/view/trip_states.xml
@@ -19,9 +19,28 @@
     </record>
 
     <menuitem id="menu_action_gtms_trip_states"
-              parent="menu_gtms_configuration"
+              parent="gtms.menu_gtms_configuration"
               action="action_gtms_trip_states"
               name="Gtms trip states"
               groups="__export__.res_groups_137_2440cc2b"/>
+
+
+    <record id="model_gtms_trip_action_checked" model="ir.actions.server">
+        <field name="name">Checked</field>
+        <field name="model_id" ref="gtms.model_gtms_trip"/>
+        <field name="binding_model_id" ref="gtms.model_gtms_trip"/>
+        <field name="groups_id" eval="[(4, ref('fleet.fleet_group_manager')),(4, ref('__export__.res_groups_116_5018c579'))]"/>
+        <field name="state">code</field>
+        <field name="code">records.checked()</field>
+    </record>
+    
+    <record id="model_gtms_trip_action_unchecked" model="ir.actions.server">
+        <field name="name">Unchecked</field>
+        <field name="model_id" ref="gtms.model_gtms_trip"/>
+        <field name="binding_model_id" ref="gtms.model_gtms_trip"/>
+        <field name="groups_id" eval="[(4, ref('fleet.fleet_group_manager')),(4, ref('__export__.res_groups_137_2440cc2b'))]"/>
+        <field name="state">code</field>
+        <field name="code">records.unchecked()</field>
+    </record>
 
 </odoo>
