--- a/view/account_analytic_line.xml
+++ b/view/account_analytic_line.xml
@@ -6,30 +6,57 @@
         <field name="inherit_id" ref="hr_timesheet.hr_timesheet_line_tree"/>
         <field name="arch" type="xml">
             <xpath expr="//tree" position="inside">
-                <field name="datetime_start"/>
-                <field name="datetime_stop"/>
-                <field name="error_txt" groups="__export__.res_groups_137_2440cc2b" optional="hide"/>
+                <field name="gtms_id" attrs="{'readonly': [('validated', '=', True)]}"/>
+                <field name="validated_status" attrs="{'readonly': [('validated', '=', True)]}"/>
+                <field name="datetime_start"  attrs="{'readonly': [('validated', '=', True)]}"/>
+                <field name="datetime_stop"  attrs="{'readonly': [('validated', '=', True)]}"/>
+                <field name="error_txt" groups="__export__.res_groups_137_2440cc2b" optional="hide" readonly="1"/>
+            </xpath>
+            <xpath expr="//tree" position="attributes">
+                <attribute name="decoration-success">validated_status == 'done'</attribute>
+                <attribute name="decoration-danger">validated_status == 'error'</attribute>
+            </xpath>
+            <xpath expr="//field[@name='employee_id']" position="replace">
+                <field name="employee_id" attrs="{'readonly': [('validated', '=', True)], 'required': True}"/>
             </xpath>
         </field>
     </record>
 
     <record id="model_account_analytic_line_action_checked" model="ir.actions.server">
-        <field name="name">Processing</field>
+        <field name="name">Processing to Pwork</field>
         <field name="model_id" ref="analytic.model_account_analytic_line"/>
         <field name="binding_model_id" ref="analytic.model_account_analytic_line"/>
         <field name="groups_id" eval="[(4, ref('fleet.fleet_group_manager')),(4, ref('__export__.res_groups_137_2440cc2b'))]"/>
         <field name="state">code</field>
-        <field name="code">records.processing()</field>
+        <field name="code">records.processing_to_pwork()</field>
     </record>
     
-    <record id="model_account_analytic_line_action_unchecked" model="ir.actions.server">
+    <!-- <record id="model_account_analytic_line_action_unchecked" model="ir.actions.server">
         <field name="name">Upload to Pwork</field>
         <field name="model_id" ref="analytic.model_account_analytic_line"/>
         <field name="binding_model_id" ref="analytic.model_account_analytic_line"/>
         <field name="groups_id" eval="[(4, ref('fleet.fleet_group_manager')),(4, ref('__export__.res_groups_137_2440cc2b'))]"/>
         <field name="state">code</field>
         <field name="code">records.upload_to_pwork()</field>
+    </record> -->
+    
+    <record id="model_account_analytic_line_action_upload_to_pwork_table" model="ir.actions.server">
+        <field name="name">Upload to Pwork Table</field>
+        <field name="model_id" ref="analytic.model_account_analytic_line"/>
+        <field name="binding_model_id" ref="analytic.model_account_analytic_line"/>
+        <field name="groups_id" eval="[(4, ref('fleet.fleet_group_manager')),(4, ref('__export__.res_groups_137_2440cc2b'))]"/>
+        <field name="state">code</field>
+        <field name="code">records.upload_to_pwork_table()</field>
     </record>
 
+    <record id="model_gtms_trip_action_check_remnants_trips" model="ir.actions.server">
+        <field name="name">TEST</field>
+        <field name="model_id" ref="analytic.model_account_analytic_line"/>
+        <field name="binding_model_id" ref="analytic.model_account_analytic_line"/>
+        <field name="groups_id" eval="[(4, ref('__export__.res_groups_137_2440cc2b'))]"/>
+        <field name="state">code</field>
+        <field name="code">records.check_remnants_trips()</field>
+    </record>
+    
     
 </odoo>
