--- a/view/trip_states.xml
+++ b/view/trip_states.xml
@@ -24,12 +24,23 @@
               name="Gtms trip states"
               groups="__export__.res_groups_137_2440cc2b"/>
 
-
+    <!-- Versione per tutti i ROP, al momento non possono farlo in versione massiva -->
     <record id="model_gtms_trip_action_checked" model="ir.actions.server">
         <field name="name">Checked</field>
         <field name="model_id" ref="gtms.model_gtms_trip"/>
         <field name="binding_model_id" ref="gtms.model_gtms_trip"/>
-        <field name="groups_id" eval="[(4, ref('fleet.fleet_group_manager')),(4, ref('__export__.res_groups_116_5d6ba1ab'))]"/>
+        <field name="groups_id" eval="[(4, ref('__export__.res_groups_116_5d6ba1ab'))]"/>
+        <field name="state">code</field>
+        <field name="binding_view_types">form</field>
+        <field name="code">records.checked()</field>
+    </record>
+    
+    <!-- Versione per fleet manager, al momento im ROP non possono farlo in versione massiva -->
+    <record id="model_gtms_trip_action_checked_admin" model="ir.actions.server">
+        <field name="name">Checked (admin)</field>
+        <field name="model_id" ref="gtms.model_gtms_trip"/>
+        <field name="binding_model_id" ref="gtms.model_gtms_trip"/>
+        <field name="groups_id" eval="[(4, ref('fleet.fleet_group_manager'))]"/>
         <field name="state">code</field>
         <field name="code">records.checked()</field>
     </record>
