--- a/view/account_analytic_line_pwork.xml
+++ b/view/account_analytic_line_pwork.xml
@@ -19,6 +19,7 @@
                 <field name="error_txt" readonly="1"/>
                 <field name="pwork" readonly="1"/>
                 <field name="analytic_ids" readonly="1"/>
+                <field name="causale_gtms_pwork" readonly="1"/>
             </tree>
         </field>
     </record>
@@ -36,6 +37,7 @@
                         <field name="validated_status" readonly="1"/>
                         <field name="error_txt" readonly="1"/>
                         <field name="pwork" readonly="1"/>
+                        <field name="causale_gtms_pwork" readonly="1"/>
                     </group>
                     <notebook>
                         <page string="Timesheets">
