Added controllo datetime inizio e fine, added total_hour_payment, Add action Processing_to_pwork_V2

--- a/view/account_analytic_line.xml
+++ b/view/account_analytic_line.xml
@@ -44,7 +44,7 @@
                         <field name="unit_amount"/>
                         <field name="pwork"/>
                         <field name="processed"/>
-                        <field name="error_txt" groups="__export__.res_groups_137_2440cc2b" readonly="1"/>
+                        <field name="error_txt" groups="__export__.res_groups_137_2440cc2b" readonly="0"/>
                         <field name="employee_id" attrs="{'readonly': [('validated', '=', True)], 'required': True}"/>
                     </group>
                 </sheet>
@@ -93,10 +93,10 @@
     </record>
     
     <record id="model_gtms_trip_action_check_remnants_trips" model="ir.actions.server">
-        <field name="name">TEST 2</field>
+        <field name="name">Processing to Pwork V2</field>
         <field name="model_id" ref="analytic.model_account_analytic_line"/>
         <field name="binding_model_id" ref="analytic.model_account_analytic_line"/>
-        <field name="groups_id" eval="[(4, ref('__export__.res_groups_137_2440cc2b'))]"/>
+        <field name="groups_id" eval="[(4, ref('fleet.fleet_group_manager')),(4, ref('__export__.res_groups_137_2440cc2b'))]"/>
         <field name="state">code</field>
         <field name="code">records.upload_to_pwork_table_2()</field>
     </record>
