--- a/view/account_analytic_line_pwork.xml
+++ b/view/account_analytic_line_pwork.xml
@@ -77,7 +77,7 @@
         <field name="name">Upload to Pwork</field>
         <field name="model_id" ref="export_hours_to_pwork.model_account_analytic_line_pwork"/>
         <field name="binding_model_id" ref="export_hours_to_pwork.model_account_analytic_line_pwork"/>
-        <field name="groups_id" eval="[(4, ref('fleet.fleet_group_manager')),(4, ref('__export__.res_groups_137_2440cc2b'))]"/>
+        <!-- REINTEGRARE <field name="groups_id" eval="[(4, ref('fleet.fleet_group_manager')),(4, ref('__export__.res_groups_137_2440cc2b'))]"/> -->
         <field name="state">code</field>
         <field name="code">records.upload_to_pwork()</field>
     </record>
