--- a/view/res_config_settings.xml
+++ b/view/res_config_settings.xml
@@ -14,7 +14,7 @@
         <field name="inherit_id" ref="base.res_config_settings_view_form"/>
         <field name="arch" type="xml">
             <xpath expr="//app[@name='general_settings']" position="after">
-                <app class="app_settings_block" data-string="Pwork settings" string="Pwork settings" data-key="pwork_settings" name="pwork_settings">
+                <app data-string="Pwork settings" string="Pwork settings" data-key="pwork_settings" name="pwork_settings">
                     <h2>Pwork settings</h2>
                     <div class="row mt16 o_settings_container">
                         <div class="col-12 col-lg-6 o_setting_box">
