--- a/view/trip_states.xml
+++ b/view/trip_states.xml
@@ -29,7 +29,7 @@
         <field name="name">Checked</field>
         <field name="model_id" ref="gtms.model_gtms_trip"/>
         <field name="binding_model_id" ref="gtms.model_gtms_trip"/>
-        DA REINTEGRARE <field name="groups_id" eval="[(4, ref('Diritti.rop_group'))]"/>
+        <field name="groups_id" eval="[(4, ref('Diritti.rop_group'))]"/>
         <field name="state">code</field>
         <field name="binding_view_types">form</field>
         <field name="code">records.checked()</field>
