--- a/view/res_config_settings.xml
+++ b/view/res_config_settings.xml
@@ -5,15 +5,17 @@
         <field name="res_model">res.config.settings</field>
         <field name="view_mode">form</field>
         <field name="target">inline</field>
+        <field name="context">{'module' : 'pwork_settings', 'bin_size': False}</field>
     </record>
+
 
     <record id="res_config_settings_view_form" model="ir.ui.view">
         <field name="name">res.config.settings.pwork.view.form.inherit</field>
         <field name="model">res.config.settings</field>
         <field name="priority" eval="15"/>
-        <field name="inherit_id" ref="base.res_config_settings_view_form"/>
+        <field name="inherit_id" ref="base_setup.res_config_settings_view_form"/>
         <field name="arch" type="xml">
-            <xpath expr="//app[@name='general_settings']" position="after">
+            <xpath expr="//form" position="inside">
                 <app data-string="Pwork settings" string="Pwork settings" data-key="pwork_settings" name="pwork_settings">
                     <h2>Pwork settings</h2>
                     <div class="row mt16 o_settings_container">
